--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Kotlin-project</string>
     <string name="test_toast">Hello, world!</string>
-    <string name="text_button">Нажмите, пожалуйста</string>
+    <string name="text_button">Вывести текст</string>
+    <string name="copy_button">Вывести свойства copy-объекта</string>
 </resources>
